[metadata]
name = BibaAndBoba
version = 0.1.7
author = Andrew Yaroshevych
author_email = ayaroshlvua@gmail.com
description = Python package for analyzing Telegram chats and finding correlations between people
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Source Code = https://github.com/andylvua/BibaAndBoba
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    pandas==1.4.3
    nltk~=3.7
    setuptools~=63.1.0
